# zero-trust-mcp

./: CHANGELOG.md  CITATION.cff  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  draft-pdf.yml
examples/: basic_policy_demo.py  policy.yaml  policy_demo.py
paper/: paper.bib  paper.md
src/zero_trust_mcp/: __init__.py  decisions.py  models.py  rate_limit.py  redaction.py
src/zero_trust_mcp/audit/: logger.py
src/zero_trust_mcp/enforcement/: wrapper.py
src/zero_trust_mcp/layers/: audit.py  authorize.py  detect_attacks.py  rate_limit.py  redact.py  validate.py
src/zero_trust_mcp/pipeline/: context.py  pipeline.py
src/zero_trust_mcp/policy/: engine.py  loader.py  schema.py
tests/: test_policy_engine.py
